Can't easily position the cursor on an empty line in a textarea with touch if touch adjustment is enabled https://bugs.webkit.org/show_bug.cgi?id=97576

Patch by Kevin Ellis <kevers@chromium.org> on 2012-10-25
Reviewed by Antonio Gomes.

Source/WebCore:

Consolidate touch adjustment candidates that are
editable.  Adjustment becomes coarse being based
on the bounds of the outermost editable element.
This fix allows tap positioning of the text caret
on a blank line immediately above or below another
element.

Test: touchadjustment/editable-content.html

* page/TouchAdjustment.cpp:
(WebCore::TouchAdjustment::compileSubtargetList):
(WebCore::TouchAdjustment::hybridDistanceFunction):

LayoutTests:

Add test to verify that touch adjustment is coarse for
editable content, being based on the bounds of the
editable content and not its children.

* touchadjustment/editable-content-expected.txt: Added.
* touchadjustment/editable-content.html: Added.

Canonical link: https://commits.webkit.org/118402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132488 268f45cc-cd09-0410-ab3c-d52691b4dbfc